# realtime

./: .gitignore  CMakeLists.txt  DistanceMatrix.h  Probe.cpp  Probe.h  README.md  SocketReader.cpp  SocketReader.h  main.cpp
kernels/: CMakeLists.txt  ChanAdd.cu  ChanAdd.cuh  Filters.cu  Filters.cuh
src/: DistanceMatrix.cpp  DistanceMatrix.h  Probe.cpp  Probe.h  main.cpp  main.cu  pipeline.h  probe.h  utilities.cu  utilities.cuh  utilities.h
src/acquisition/: FileReader.h  file_reader.cpp  file_reader.cu  file_reader.cuh  file_reader.h  reader.cpp  reader.cu  reader.cuh  reader.h  socket_reader.cpp  socket_reader.cu  socket_reader.cuh  socket_reader.h
src/clustering/: dp_clustering.cpp  dp_clustering.cu  dp_clustering.cuh  dp_clustering.h
src/detection/: ThresholdComputer.h  detector.cpp  detector.cu  detector.cuh  detector.h  threshold_computer.cpp  threshold_computer.cu  threshold_computer.cuh  threshold_computer.h  thresholding.cuh
src/extraction/: Snippet.cpp  Snippet.h  SnippetExtractor.cpp  SnippetExtractor.h  extractor.cpp  extractor.cu  extractor.cuh  extractor.h  feature_extractor.cu  feature_extractor.cuh  snippet.cpp  snippet.cu  snippet.cuh  snippet.h  snippet_extractor.cpp  snippet_extractor.cu  snippet_extractor.cuh  snippet_extractor.h
src/kernels/: CMakeLists.txt  dev_array.cu  dev_array.cuh  filters.cu  filters.cuh  kernels.cuh  operators.cuh  pca.cu  pca.cuh  stats.cu  stats.cuh  thresholds.cu  thresholds.cuh
src/params/: ThresholdParams.cpp  ThresholdParams.h  acquire_params.cuh  acquire_params.h  classify_params.h  detect_params.h  device_params.h  extract_params.h  params.cuh  params.h  threshold_params.h
src/pipeline/: offline_pipeline.cpp  offline_pipeline.h  pipeline.cpp  pipeline.cu  pipeline.cuh  pipeline.h  pipeline_thread_pool.cpp  pipeline_thread_pool.cu  pipeline_thread_pool.cuh  pipeline_thread_pool.h
src/probe/: probe.cpp  probe.cu  probe.cuh  probe.h  probe_reader.cpp  probe_reader.cu  probe_reader.cuh
src/structures/: MedianTree.cpp  MedianTree.h  MedianTreeNode.cpp  MedianTreeNode.h  OldMedianTree.cpp  OldMedianTree.h  OldMedianTreeNode.cpp  OldMedianTreeNode.h  RingBuffer.cpp  RingBuffer.h  distance_matrix.cpp  distance_matrix.cu  distance_matrix.cuh  distance_matrix.h  median_tree.cpp  median_tree.cu  median_tree.cuh  median_tree.h  median_tree_node.cpp  median_tree_node.cu  median_tree_node.h  sample_matrix.cu  sample_matrix.cuh
tests/: CMakeLists.txt  DistanceMatrixTests.cpp  FileReaderTests.cpp  KernelTests.cu  MedianTreeNodeTests.cpp  MedianTreeTests.cpp  OldMedianTreeNodeTests.cpp  OldMedianTreeTests.cpp  ProbeTests.cpp  README.md  SnippetExtractorTests.cpp  SnippetTests.cpp  SocketReaderTests.cpp  TestProbe.h  TestSocketServer.cpp  TestSocketServer.h  ThresholdComputerTests.cpp  detector_test.cpp  detector_test.cu  distance_matrix_test.cpp  distance_matrix_test.cu  extractor_test.cpp  file_reader_test.cpp  file_reader_test.cu  kernel_test.cu  kernels_test.cu  median_tree_node_test.cpp  median_tree_node_test.cu  median_tree_test.cpp  median_tree_test.cu  offline_pipeline_test.cpp  params_test.cpp  params_test.cu  pipeline_test.cpp  pipeline_test.cu  pipeline_thread_pool_test.cpp  pipeline_thread_pool_test.cu  poll.cpp  probe_test.cpp  probe_test.cu  (+11 more)
tests/test_utilities/: test_exception.cuh  test_probe.cpp  test_probe.cu  test_probe.cuh  test_probe.h  test_utilities.cpp  test_utilities.cu  test_utilities.cuh  test_utilities.h
tests/utilities/: TestException.cpp  TestException.h  TestProbe.cpp  TestProbe.h
